--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,7 +44,7 @@ dependencies=[
   "hf_transfer",
   "torchdata",
   "openhands-ai",
-  'sglang[all]>=0.4.6.post1', 
+  'sglang[all]==0.4.4.post4', 
   "flash-attn@https://github.com/Dao-AILab/flash-attention/releases/download/v2.7.4.post1/flash_attn-2.7.4.post1+cu12torch2.5cxx11abifalse-cp312-cp312-linux_x86_64.whl",
   "streamlit",
   "whatthepatch",
