--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "SkyRL-OpenHands"]
-	path = SkyRL-OpenHands
+	path = skyrl-agent/SkyRL-OpenHands
 	url = https://github.com/NovaSky-AI/SkyRL-OpenHands
