--- a/skyrl-train/skyrl_train/config/ppo_base_config.yaml
+++ b/skyrl-train/skyrl_train/config/ppo_base_config.yaml
@@ -2,7 +2,7 @@ defaults:
   - _self_
   - deepspeed_config@deepspeed_config.train: train
   - deepspeed_config@deepspeed_config.eval: eval
-  - skygym_config@skygym: default
+  - skyrl_gym_config@skyrl_gym: default
 
 data:
   train_data: ["${oc.env:HOME}/data/gsm8k/train.parquet"]
@@ -194,4 +194,4 @@ generator:
 
 environment:
   env_class: "gsm8k"
-  skygym: ${skygym}
+  skyrl_gym: ${skyrl_gym}
