--- a/.gitignore
+++ b/.gitignore
@@ -29,12 +29,12 @@ docs/_spelling/
 
 # .env files inside directories can be ignored
 /skyrl-train/.env
-/skygym/.env 
+/skyrl-gym/.env 
 
 /skyrl_train/.venv
-/skygym/.venv
+/skyrl-gym/.venv
 
 # build
-/skygym/build
+/skyrl-gym/build
 
 *.log
