--- a/skyrl-train/skyrl_train/config/ppo_base_config.yaml
+++ b/skyrl-train/skyrl_train/config/ppo_base_config.yaml
@@ -194,3 +194,5 @@ generator:
 
 environment:
   env_class: "gsm8k"
+  # NOTE: environment specific defaults for environment.skyrl_gym are set at the following path:
+  # skyrl_gym: config/skyrl_gym_config/default.yaml
