[fix] In docs and scripts, test.parquet->validation.parquet, and ["xx"] -> "[xx]"

--- a/skyrl-train/skyrl_train/config/ppo_base_config.yaml
+++ b/skyrl-train/skyrl_train/config/ppo_base_config.yaml
@@ -6,7 +6,7 @@ defaults:
 
 data:
   train_data: ["${oc.env:HOME}/data/gsm8k/train.parquet"]
-  val_data: ["${oc.env:HOME}/data/gsm8k/test.parquet"]
+  val_data: ["${oc.env:HOME}/data/gsm8k/validation.parquet"]
 
 trainer:
   placement:
