--- a/skyrl-train/skyrl_train/config/ppo_base_config.yaml
+++ b/skyrl-train/skyrl_train/config/ppo_base_config.yaml
@@ -195,6 +195,7 @@ generator:
 
 environment:
   env_class: "gsm8k"
+  # number of background workers for env step calls. Set to 0 to disable background workers.
   max_env_workers: 10
   # NOTE: environment specific defaults for environment.skyrl_gym are set at the following path:
   # skyrl_gym: config/skyrl_gym_config/default.yaml
