--- a/skyrl-train/skyrl_train/config/skyrl_gym_config/default.yaml
+++ b/skyrl-train/skyrl_train/config/skyrl_gym_config/default.yaml
@@ -1,3 +1,7 @@
 # @package environment.skyrl_gym
 text2sql:
   db_path: "/home/ray/default/sql_data"
+
+text2sqlLLMJudge:
+  model: "gpt-4o-mini"
+  OPENAI_API_KEY: "openai_api_key"
