skyrl gym seems to work
Signed-off-by: SumanthRH <sumanthrh99@gmail.com>

--- a/skyrl-train/pyproject.toml
+++ b/skyrl-train/pyproject.toml
@@ -49,6 +49,9 @@ conflicts = [
     ],
 ]
 
+[tool.uv.sources]
+skyrl-gym = { path = "./skyrl-gym" , editable = true }
+
 [project.optional-dependencies]
 deepspeed = [
     "deepspeed==0.16.5"
