--- a/skyrl-train/pyproject.toml
+++ b/skyrl-train/pyproject.toml
@@ -79,8 +79,7 @@ vllm = [
     "flashinfer-python@https://download.pytorch.org/whl/cu128/flashinfer/flashinfer_python-0.2.6.post1%2Bcu128torch2.7-cp39-abi3-linux_x86_64.whl",
 ]
 sglang = [
-    "sglang[srt,openai]==0.4.8.post1",
-    "torch-memory-saver>=0.0.5",
+    "sglang[srt,openai,torch_memory_saver]==0.4.8.post1",
     # The version is pinned to 0.2.5 because sglang requires this
     # NOTE (sumanthrh): This can be made a common dependency, but then different inference engines can pin different compatible flashinfer versions and it might quickly break.
     "flashinfer-python@https://download.pytorch.org/whl/cu128/flashinfer/flashinfer_python-0.2.6.post1%2Bcu128torch2.7-cp39-abi3-linux_x86_64.whl",
