--- a/skyrl-train/pyproject.toml
+++ b/skyrl-train/pyproject.toml
@@ -52,6 +52,7 @@ conflicts = [
 [tool.uv.sources]
 skyrl-gym = { path = "./skyrl-gym" , editable = true }
 torch = { index = "pytorch-cu128" }
+torchvision = { index = "pytorch-cu128" }
 
 [project.optional-dependencies]
 deepspeed = [
@@ -77,6 +78,7 @@ vllm = [
     # NOTE (sumanthrh): We explictly use a flashinfer wheel from their index. 
     # The wheels on PyPI don't come with pre-compiled kernels and the package will JIT compile them at runtime (terribly slow).
     "flashinfer-python@https://download.pytorch.org/whl/cu128/flashinfer/flashinfer_python-0.2.6.post1%2Bcu128torch2.7-cp39-abi3-linux_x86_64.whl",
+    "torchvision",
 ]
 sglang = [
     "sglang[srt,openai,torch_memory_saver]==0.4.8.post1",
