--- a/skyrl-train/pyproject.toml
+++ b/skyrl-train/pyproject.toml
@@ -46,6 +46,7 @@ conflicts = [
     [
         { extra = "vllm" },
         { extra = "sglang" },
+        { extra = "cpu_ci_test" },
     ],
 ]
 
@@ -58,13 +59,15 @@ torchvision = { index = "pytorch-cu128" }
 deepspeed = [
     "deepspeed==0.16.5"
 ]
+cpu_ci_test = [
+    "flash-attn@https://github.com/Dao-AILab/flash-attention/releases/download/v2.7.4.post1/flash_attn-2.7.4.post1+cu12torch2.6cxx11abiFALSE-cp312-cp312-linux_x86_64.whl",
+]
 dev = [
     "ruff==0.11.9",
     "black==24.10.0",
     "pytest>=6.2.5",
     "pytest-asyncio",
     "pre-commit",
-    "flash-attn@https://github.com/Dao-AILab/flash-attention/releases/download/v2.7.4.post1/flash_attn-2.7.4.post1+cu12torch2.6cxx11abiFALSE-cp312-cp312-linux_x86_64.whl",
 ]
 docs = [
     "sphinx>=7.0.0",
