--- a/skyrl-train/skyrl_train/config/ppo_base_config.yaml
+++ b/skyrl-train/skyrl_train/config/ppo_base_config.yaml
@@ -89,7 +89,7 @@ trainer:
     advantage_batch_normalize: false
     value_head_prefix: "value_head"
     ppo_loss_type: "regular" # "regular", "dual_clip"
-    ppo_loss_reduction_type: "token_mean" # "token_mean", "sequence_mean"
+    loss_reduction: "token_mean" # "token_mean", "sequence_mean"
     # GAE parameters
     lambd: 1.0
     gamma: 1.0
