--- a/.github/workflows/gpu_ci.yaml
+++ b/.github/workflows/gpu_ci.yaml
@@ -4,7 +4,7 @@ on:
   push: 
     branches: 
       - main 
-      - skyrl_ci # TESTING
+      - gpu_ci # TESTING
   workflow_dispatch: # manual trigger
 
 permissions:
