--- a/skyrl-train/ci/anyscale_gpu_ci.yaml
+++ b/skyrl-train/ci/anyscale_gpu_ci.yaml
@@ -1,4 +1,4 @@
-name: my-job
+name: skyrl-train-gpu-ci
 entrypoint: bash ci/gpu_ci_run.sh
 image_uri: sumanthrh/skyrl-train-ray-2.44.0-py3.12-cu12.8 # (Optional) Exclusive with `containerfile`.
 cloud: sky-anyscale-aws-us-east-1
