[GPU CI] Only trigger workflow for relevant changes in `skyrl-train` (#114)

--- a/.github/workflows/gpu_ci.yaml
+++ b/.github/workflows/gpu_ci.yaml
@@ -3,7 +3,12 @@ name: SkyRL-GPU
 on: 
   push: 
     branches: 
-      - main 
+      - main
+    paths:
+      - 'skyrl-train/**'
+      - '!skyrl-train/docs/**'
+      - '!skyrl-train/examples/**'
+      - '.github/workflows/**'
   workflow_dispatch:
 
 
