--- a/skyrl-train/skyrl_train/config/ppo_base_config.yaml
+++ b/skyrl-train/skyrl_train/config/ppo_base_config.yaml
@@ -90,6 +90,7 @@ trainer:
     value_head_prefix: "value_head"
     policy_loss_type: "regular" # "regular", "dual_clip", or customizable with PolicyLossRegistry
     loss_reduction: "token_mean" # "token_mean", "sequence_mean"
+    importance_sampling_level: "token" # "token", "sequence"
     # GAE parameters
     lambd: 1.0
     gamma: 1.0
