--- a/skyrl-train/pyproject.toml
+++ b/skyrl-train/pyproject.toml
@@ -75,6 +75,9 @@ docs = [
     "sphinx-copybutton>=0.5.0",
     "sphinx-autobuild>=2021.3.14"
 ]
+litellm = [
+    "litellm>=1.67.5",
+]
 vllm = [
     "vllm==0.9.2",
     # NOTE (sumanthrh): We explictly use a flashinfer wheel from their index. 
