--- a/skyrl-train/skyrl_train/config/ppo_base_config.yaml
+++ b/skyrl-train/skyrl_train/config/ppo_base_config.yaml
@@ -90,6 +90,8 @@ trainer:
     value_head_prefix: "value_head"
     policy_loss_type: "regular" # "regular", "dual_clip", "gspo", or customizable with PolicyLossRegistry
     loss_reduction: "token_mean" # "token_mean", "sequence_mean"
+    # Dr. GRPO
+    norm_adv_by_std_in_grpo: true
     # GAE parameters
     lambd: 1.0
     gamma: 1.0
