--- a/skyrl-train/skyrl_train/config/ppo_base_config.yaml
+++ b/skyrl-train/skyrl_train/config/ppo_base_config.yaml
@@ -90,8 +90,7 @@ trainer:
     value_head_prefix: "value_head"
     policy_loss_type: "regular" # "regular", "dual_clip", "gspo", or customizable with PolicyLossRegistry
     loss_reduction: "token_mean" # "token_mean", "sequence_mean", "max_seq_len_normalized_mean"
-    # Dr. GRPO
-    norm_adv_by_std_in_grpo: true # set to false to disable normalization by std in GRPO (used in Dr. GRPO)
+    grpo_norm_by_std: true # set to false to disable normalization by std in GRPO
     # GAE parameters
     lambd: 1.0
     gamma: 1.0
