feat: Add replay manager, change config names to replay

--- a/skyrl-train/skyrl_train/config/ppo_base_config.yaml
+++ b/skyrl-train/skyrl_train/config/ppo_base_config.yaml
@@ -107,11 +107,12 @@ trainer:
       type: null # filter, replace, or null
       max_sample_batches: 30 # sample at most this many batches before stopping, -1 to sample forever
       min_replace_ratio: 0.3 # minimum proportion of good samples with which to replace bad samples (for replace strategy only)
-  off_policy:
-    enable: false # whether to enable or disable off-policy training
-    buffer_capacity: 64    # optional, if you add replay
-    max_staleness_steps: 1    # 0 = strictly on-policy, >=1 = off-policy
-    prefer_recent: true       # optional, bias sampler to fresher item
+  replay:
+    enable: false                # enable/disable replay layer
+    buffer_capacity: 64          # number of items (trajectories) to retain in replay
+    sample_batch_size: 1024      # trajectories per training sample from replay
+    max_staleness_steps: 1       # 0=strictly on-policy; >=1 allows bounded off-policy
+    sampling: prefer_recent      # prefer_recent | fifo | random
 
   gradient_checkpointing: true
   gradient_checkpointing_use_reentrant: false
