[Generator] Support non-remote (e.g. colocated) SGLang engine (#68)
### Overview
Before this PR, we can only use SGLang as a backend to generate rollout
as a remote server (see `sglang_server.py`).

This PR implements `sglang_engine.py` to allow using SGLang locally
(e.g. colocate with the policy model).

We bump SGLang to `0.4.8.post1` for now. Bumping to `0.4.9.post1` causes
weight sync to hang when not colocated (but using local engine) -- i.e.
the test `no_colocate_nccl_fsdp2_sglang` in
`test_policy_local_engines_e2e.py` would fail. `0.4.8.post1` already
supports two-stage wake up:
https://github.com/sgl-project/sglang/pull/7099

**Currently, we still cannot support TP > 1 with the local engines and
leave it as a future TODO.**

### Three quirks
1. We use a remote task `get_sglang_engine()` to create
`SGLangInferenceEngine`, since we need a GPU to import SGLang, otherwise
sglang will try to import vllm, making dependencies management a bit
messy
2. To support weight sync via CUDA IPC, we need to write per-tp-worker
code. Since SGLang does not support `worker-extension-cls` like vLLM
does, the only way I found is to use `custom_weight_loader`. We base64
encode the ipc handles into a tensor and reuse SGLang's
`update_weights_from_tensor()`.
3. SGLang currently cannot sleep, wake up, and start generating. They
have to do explicit weight sync, hence the `no_sync` parameter change in
`eval_weights_manager`
(https://github.com/sgl-project/sglang/issues/7939)

### Tests
- Parametrized the `test_policy_vllm_e2e.py` to also run with SGLang,
and renamed the test as a result. This test covers instantiating the
engine, sleep, wake up, weight sync, then generate. We also test with
different config combinations.
- Parametrized the `test_engine_generation.py` which tests both remote
sglang and local sglang.
- See E2E results below too

### Future TODO
- [ ] Support TP > 1 for the non-remote SGLang engines, reaching parity
with non-remote vLLM engines

### E2E `run_gsm8k.sh` on

--- a/skyrl-train/pyproject.toml
+++ b/skyrl-train/pyproject.toml
@@ -62,7 +62,7 @@ dev = [
     "black==24.10.0",
     "pytest>=6.2.5",
     "pytest-asyncio",
-    "pre-commit"
+    "pre-commit",
 ]
 docs = [
     "sphinx>=7.0.0",
@@ -81,7 +81,7 @@ vllm = [
     "torchvision"
 ]
 sglang = [
-    "sglang[srt,openai,torch_memory_saver]==0.4.8.post1",
+    "sglang[srt,openai,torch_memory_saver]==0.4.8.post1",  # 0.4.9.post1 causes non-colocate weight broadcast to hang
     # The version is pinned to 0.2.5 because sglang requires this
     # NOTE (sumanthrh): This can be made a common dependency, but then different inference engines can pin different compatible flashinfer versions and it might quickly break.
     "flashinfer-python@https://download.pytorch.org/whl/cu128/flashinfer/flashinfer_python-0.2.6.post1%2Bcu128torch2.7-cp39-abi3-linux_x86_64.whl",
