[FlashRL 1/N] Add support for truncated importance sampling (#145)
# What does this PR do? 

Adds support for truncated importance sampling proposed in
https://fengyao.notion.site/flash-rl

To support this, we need to add a an optional `rollout_logprobs` fields
at the inference engine. Note that because the default path has no use
for rollout logprobs it is not obtained by default and is populated as
`None`. There is some ugliness with just being able to handle both these
cases (no logprobs and with logprobs) but it's fine for now.


TODO: 
- [x] Run E2E GPU tests for vllm and sglang
- [x] Test agent loop path with tis (requires token in, token out fix -
not taken up for now)

---------

Signed-off-by: SumanthRH <sumanthrh99@gmail.com>

--- a/skyrl-train/skyrl_train/config/ppo_base_config.yaml
+++ b/skyrl-train/skyrl_train/config/ppo_base_config.yaml
@@ -102,6 +102,9 @@ trainer:
     eps_clip_high: 0.2
     # dual clip parameters
     clip_ratio_c: 3.0
+    # Truncated Importance Sampling as proposed in https://fengyao.notion.site/off-policy-rl 
+    tis_imp_ratio_cap: -1.0
+    use_tis: false
 
     # value loss parameters
     value_clip: 0.2
@@ -177,6 +180,7 @@ generator:
     top_p: 1.0
     min_p: 0.0
     top_k: -1
+    logprobs: null
 
   # whether to use a conversation based format for multi-turn generations
   # if false, append multi-turn model responses and env observations to the original assistant response
@@ -190,6 +194,7 @@ generator:
     top_p: 1.0
     min_p: 0.0
     top_k: -1
+    logprobs: null
 
   # number of samples per prompt for evaluation
   eval_n_samples_per_prompt: 1
