--- a/skyrl-train/pyproject.toml
+++ b/skyrl-train/pyproject.toml
@@ -38,6 +38,9 @@ dependencies = [
     "tensordict",
     "jaxtyping",
     "skyrl-gym",
+    "fsspec>=2023.1.0",
+    "s3fs>=2023.1.0",
+    "gcsfs>=2023.1.0",
 ]
 
 [tool.uv]
