[FlashRL 2/N] Support list of weights during weight sync for colocated training (#161)
# What does this PR do?

Supports a list of weights during weight sync for colocated training.
During colocated training, we use CUDA IPC for weight syncing. The
current impl is syncing weights param by param, which can be pretty
inefficient. In this PR, we sycn tensors in batches of a configurable
parameter (default 1GB). That is, we collect ipc metadata until the
total size of underlying tensors is 1GB and forward to the inference
engine. Each TP rank will materialize all tensors in this list (i.e
additional memory usage of 1GB here) and issue a single load_weights
call.

**How much faster is it?**

Even for a 14B model on a 8xH100 node (TP2), the weight sync time can
reduce from around 4.4s to 1.6s (60% reduction). This will matter much
more for larger models.

This PR is needed for the FlashRL integration to work well, because we
have a custom load weights impl that - long story short - allcoates new
storage in each call and also issues some `empty_cache` calls. Without
batching, the load weights call will be too slow in such cases. This PR
reduces time for weight sync for a 1.5B model with flashrl from 5 mins
to < 5s.

I've tested the PR with our E2E tests for colocated and non-colocated
and also tested the remote engine codepath.

This PR also makes the following changes:
- Fixes bug introduced in #145 for the codepath with trajectory based
routing when `response_ids` is not returned by the engine.
- Fixes bug introduced in #126 for starting remote servers. import of
`skyrl_train.utils.ppo_utils` will trigger registering. IN some cases,
like with the vllm server init, we will not call `sync_registries` and
there will be an error. The solution is to import guard
`skyrl_train.utils.ppo_utils` unless the user themselves import it (for
custom functions) or they go through the main entrypoint ( main ->
`initialize_ray`-> sync)


TODO:
- [x] Verify non-colocated training works
- [

--- a/skyrl-train/skyrl_train/config/ppo_base_config.yaml
+++ b/skyrl-train/skyrl_train/config/ppo_base_config.yaml
@@ -115,6 +115,7 @@ trainer:
       type: null # filter, replace, or null
       max_sample_batches: 30 # sample at most this many batches before stopping, -1 to sample forever
       min_replace_ratio: 0.3 # minimum proportion of good samples with which to replace bad samples (for replace strategy only)
+    
 
   gradient_checkpointing: true
   gradient_checkpointing_use_reentrant: false
@@ -158,6 +159,8 @@ generator:
   num_inference_engines: 1
   backend: "vllm"
   weight_sync_backend: "nccl"
+  # if using cuda_ipc, we send in batches of this size in GB
+  weight_transfer_threshold_cuda_ipc_GB: 1.0
   inference_engine_tensor_parallel_size: 4
   n_samples_per_prompt: 5
   async_engine: true
