--- a/skyrl-train/skyrl_train/config/ppo_base_config.yaml
+++ b/skyrl-train/skyrl_train/config/ppo_base_config.yaml
@@ -134,6 +134,9 @@ trainer:
   critic_mini_batch_size: 256
   micro_train_batch_size_per_gpu: 1
   micro_forward_batch_size_per_gpu: 1
+  use_dynamic_batching: false  # Enable dynamic token-based batching instead of fixed batch sizes
+  max_token_len_per_gpu: 4096  # Maximum tokens per micro-batch when dynamic batching is enabled
+  max_token_len_per_gpu_forward: 8192  # Maximum tokens per micro-batch when dynamic batching is enabled for forward pass
   update_ref_every_epoch: false
   use_sample_packing: true
   eval_batch_size: 1024
