--- a/skyrl-train/pyproject.toml
+++ b/skyrl-train/pyproject.toml
@@ -46,6 +46,11 @@ conflicts = [
         { extra = "vllm" },
         { extra = "sglang" },
     ],
+    [
+        { extra = "vllm" },
+        { extra = "flashrl" },
+        { extra = "sglang" },
+    ]
 ]
 
 [tool.uv.sources]
@@ -92,7 +97,15 @@ sglang = [
     "torch==2.7.1",
     "torchvision",
 ]
-
+flashrl = [
+    # TODO (sumanthrh): Shift to install from git source
+    # Currently, this is the wheel built for commit a13b4adac at: https://github.com/SumanthRH/vllm/tree/flashrl
+    # Install from git source is currently breaking for some reason
+    "vllm @ https://github.com/NovaSky-AI/SkyRL/releases/download/skyrl_train-v0.1.0/vllm-0.1.dev7505+ga13b4adac-cp312-cp312-linux_x86_64.whl",
+    "torch==2.7.0",
+    "flashinfer-python",
+    "torchvision"
+]
 
 [[tool.uv.index]]
 name = "pytorch-cu128"
