--- a/skyrl-train/skyrl_train/config/ppo_base_config.yaml
+++ b/skyrl-train/skyrl_train/config/ppo_base_config.yaml
@@ -193,6 +193,11 @@ generator:
   # if true, each multi-turn model response and env observations is stored in a separate assistant/user message respectively
   use_conversation_multi_turn: true
 
+  # Used when use_conversation_multi_turn is true, and sampling_params.stop is not null.
+  # If true, append tokenizer.eos_token_id to the end of the generation if the generation ends
+  # with stop_reason "stop" and matched a stop string in sampling_params.stop.
+  append_eos_token_after_stop_str_in_multi_turn: true
+
   # sampling params for evaluation
   eval_sampling_params:
     max_generate_length: ${generator.sampling_params.max_generate_length}
