--- a/skyrl-train/pyproject.toml
+++ b/skyrl-train/pyproject.toml
@@ -53,6 +53,7 @@ conflicts = [
         { extra = "sglang" },
     ]
 ]
+override-dependencies = ["openai==1.90.0"] # hack
 
 [tool.uv.sources]
 skyrl-gym = { path = "./skyrl-gym" , editable = true }
@@ -106,6 +107,10 @@ flashrl = [
     "torch==2.7.0",
     "flashinfer-python",
     "torchvision",
+]
+miniswe = [
+    "mini-swe-agent@git+https://github.com/SWE-agent/mini-swe-agent",
+    "litellm"
 ]
 
 [[tool.uv.index]]
