--- a/skyrl-train/examples/mini_swe_agent/.env.miniswe
+++ b/skyrl-train/examples/mini_swe_agent/.env.miniswe
@@ -1,3 +1,4 @@
 HOSTED_VLLM_API_BASE=127.0.0.1:8001
-LITELLM_MODEL_REGISTRY_PATH=/home/ray/default/SkyRL/skyrl-train/litellm.json
+LITELLM_MODEL_REGISTRY_PATH=/home/ray/default/SkyRL_orig/skyrl-train/litellm.json
 NCCL_DEBUG=TRACE
+APPTAINER_DEBUG=1
