--- a/skyrl-train/examples/mini_swe_agent/swebench.yaml
+++ b/skyrl-train/examples/mini_swe_agent/swebench.yaml
@@ -214,7 +214,7 @@ agent:
 
 environment:
   cwd: "/testbed"
-  timeout: 60
+  timeout: 120
   env:
     PAGER: cat
     MANPAGER: cat
@@ -222,6 +222,7 @@ environment:
     PIP_PROGRESS_BAR: 'off'
     TQDM_DISABLE: '1'
   environment_class: singularity
+  executable: apptainer
 
 model:
   model_name: "Qwen/Qwen2.5-0.5B-Instruct"
