testing out eval
Signed-off-by: SumanthRH <sumanthrh99@gmail.com>

--- a/skyrl-train/examples/mini_swe_agent/.env.miniswe
+++ b/skyrl-train/examples/mini_swe_agent/.env.miniswe
@@ -1,4 +1,2 @@
-HOSTED_VLLM_API_BASE=127.0.0.1:8001
-LITELLM_MODEL_REGISTRY_PATH=/home/ray/default/SkyRL_orig/skyrl-train/litellm.json
-NCCL_DEBUG=TRACE
-APPTAINER_DEBUG=1
+HOSTED_VLLM_API_BASE=http://127.0.0.1:8001/v1
+LITELLM_MODEL_REGISTRY_PATH=/home/ray/default/SkyRL_orig/skyrl-train/examples/mini_swe_agent/litellm.json
