--- a/skyrl-train/examples/mini_swe_agent/swebench.yaml
+++ b/skyrl-train/examples/mini_swe_agent/swebench.yaml
@@ -209,7 +209,7 @@ agent:
 
     If you have completed your assignment, please consult the first message about how to
     submit your solution (you will not be able to continue working on this task after that).
-  step_limit: 250
+  step_limit: 1
   cost_limit: 3.
 
 environment:
@@ -225,7 +225,7 @@ environment:
   executable: apptainer
 
 model:
-  model_name: "Qwen/Qwen2.5-0.5B-Instruct"
+  model_name: "Qwen/Qwen3-4B"
   model_kwargs:
     drop_params: true
     temperature: 0.0
