--- a/skyrl-train/examples/mini_swe_agent/.env.miniswe
+++ b/skyrl-train/examples/mini_swe_agent/.env.miniswe
@@ -1,2 +1,3 @@
 HOSTED_VLLM_API_BASE=http://127.0.0.1:8001/v1
-LITELLM_MODEL_REGISTRY_PATH=/home/ray/default/SkyRL_orig/skyrl-train/examples/mini_swe_agent/litellm.json
+# relative to the `skyrl-train` directory, or an absolute path accessible to all nodes in the Ray cluster
+LITELLM_MODEL_REGISTRY_PATH=examples/mini_swe_agent/litellm.json
