[HTTP] Add HTTP server for generator, support /chat/completions

--- a/skyrl-train/pyproject.toml
+++ b/skyrl-train/pyproject.toml
@@ -77,6 +77,8 @@ dev = [
     "pytest>=6.2.5",
     "pytest-asyncio",
     "pre-commit",
+    "fastapi",
+    "uvicorn",
 ]
 docs = [
     "sphinx>=7.0.0",
