--- a/skyrl-train/skyrl_train/config/ppo_base_config.yaml
+++ b/skyrl-train/skyrl_train/config/ppo_base_config.yaml
@@ -175,9 +175,9 @@ generator:
   gpu_memory_utilization: 0.8
   max_num_seqs: 1024
   remote_inference_engine_urls: ["127.0.0.1:8001"]
-  use_inference_http_server: false
-  inference_http_server_host: "127.0.0.1"
-  inference_http_server_port: 8000
+  enable_http_endpoint: false
+  http_endpoint_host: "127.0.0.1"
+  http_endpoint_port: 8000
   max_turns: 1
 
   override_existing_update_group: "auto" # "auto", "enable", "disable"
